Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1683

channel_stats does not compile on FreeBSD

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.1
    • Plugins
    • None

    Description

      Output from gmake (using GCC 4.2.1):

      gmake[3]: Entering directory `/root/trafficserver/plugins/experimental/channel_stats'
      CXX channel_stats.lo
      channel_stats.cc: In function 'void handle_read_req(tsapi_cont*, tsapi_httptxn*)':
      channel_stats.cc:321: error: invalid use of incomplete type 'struct sockaddr_in'
      channel_stats.cc:284: error: forward declaration of 'struct sockaddr_in'
      channel_stats.cc:323: error: invalid use of incomplete type 'struct sockaddr_in'
      channel_stats.cc:284: error: forward declaration of 'struct sockaddr_in'
      gmake[3]: *** [channel_stats.lo] Error 1

      Someone should fix this

      Attachments

        Activity

          People

            i.galic Igor Galić
            humbedooh Daniel Gruno
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: