TS-1683: channel_stats doesn't compile under fBSD

we fix it by including the header <inet/in.h> which is where sockaddr_in
is defined on FreeBSD. We only included it, #if the header exists.